--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/sul_fragment_button"
-        android:text="Sign In"
+        android:text="Sign Up"
         android:layout_gravity="center"/>
 
 </LinearLayout>
