--- a/app/src/main/res/layout/activity_course_listings.xml
+++ b/app/src/main/res/layout/activity_course_listings.xml
@@ -10,9 +10,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.anthony_powell.rollcallreboot.CourseListingsActivity">
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@android:id/list"></ListView>
+        android:id="@android:id/list"></android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
