--- a/app/src/main/res/layout/course_list_item.xml
+++ b/app/src/main/res/layout/course_list_item.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:id="@+id/list_item_container"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <LinearLayout
+              android:layout_height="56dp"
+              android:gravity="center_vertical|left"
+              android:orientation="horizontal"
+              android:paddingLeft="16dp"
+    >
+
+
+    <android.support.v4.widget.CircleImageView
+        android:id="@+id/list_item_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <android.support.v4.widget.CircleImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_delete"
-            android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:src="@android:drawable/ic_delete"
+        android:tint="@color/colorPrimary"/>
+
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/course_list_item_text"
-        android:text="Blank Holder"/>
-    </LinearLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Blank Holder"
+        android:gravity="center"
+        android:paddingLeft="8dp"/>
+
 
 </LinearLayout>
